libs/braillify/tests/snapshots/coverage_extra__parse_bare_decimal.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = ".5"
unicode = ok: "⠼⠲⠑"
bytes   = ok: [60, 50, 17]
