libs/braillify/tests/snapshots/coverage_extra__parse_ceiling.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "⌈x⌉"
unicode = err: Invalid character
bytes   = err: Invalid character
