libs/braillify/tests/snapshots/coverage_extra__parse_chained_slash.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "1/2/3"
unicode = ok: "⠼⠁⠸⠌⠼⠃⠸⠌⠼⠉"
bytes   = ok: [60, 1, 56, 12, 60, 3, 56, 12, 60, 9]
