libs/braillify/tests/snapshots/coverage_extra__parse_leading_zero.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "0.001"
unicode = ok: "⠼⠚⠲⠚⠚⠁"
bytes   = ok: [60, 26, 50, 26, 26, 1]
