libs/braillify/tests/snapshots/coverage_extra__parse_lim_arrow.snap
---
source: libs/braillify/tests/coverage_extra.rs
assertion_line: 447
expression: rendered
---
input  = "lim a→b"
unicode = ok: "⠇⠊⠍⠀⠁⠒⠕⠀⠃"
bytes   = ok: [7, 10, 13, 0, 1, 18, 21, 0, 3]
