libs/braillify/tests/snapshots/coverage_extra__partial_f.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "∂f"
unicode = ok: "⠫⠋"
bytes   = ok: [43, 11]
