libs/braillify/tests/snapshots/coverage_extra__perpendicular.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "a⊥b"
unicode = ok: "⠁⠴⠄⠃"
bytes   = ok: [1, 52, 4, 3]
