libs/braillify/tests/snapshots/coverage_extra__pi_pair_0_100.snap
---
source: libs/braillify/tests/coverage_extra.rs
expression: rendered
---
input  = "∏(0,100)"
unicode = err: Invalid character
bytes   = err: Invalid character
